--- a/templates/partials/electiontabs.html
+++ b/templates/partials/electiontabs.html
@@ -2,13 +2,16 @@
   {% for election_name in ELECTIONS %}
     <li class="nav-item position-relative tab-item">
       <button class="nav-link election-tab {% if election_name == current_election %}active{% endif %}"
-              data-election="{{ election_name }}">
+              data-election="{{ election_name }}"
+              onclick="selectElection('{{ election_name }}')">
         {{ election_name }}
       </button>
-      <span class="delete-tab-btn" data-election="{{ election_name }}">×</span>
+      <span class="delete-tab-btn"
+            data-election="{{ election_name }}"
+            onclick="deleteElection('{{ election_name }}')">×</span>
     </li>
   {% endfor %}
   <li class="nav-item">
-    <button class="nav-link" id="add-election-tab" style="font-weight: bold;">＋NEW</button>
+    <button class="nav-link" id="add-election-tab" style="font-weight: bold;" onclick="addElection()">＋NEW</button>
   </li>
 </ul>
