--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -193,24 +193,39 @@
 {% block captains %}
 
 <div id="tabletitle" >
+  <select id="tableSelector">
+    <option value="resources">resources</option>
+    <option value="markerframe">Markers</option>
+    <option value="ELECTIONS">Elections</option>
+  </select>
 <h2>Details for : {{ (formdata or {}).get('tabledetails', '')}} </h2>
-<select id="tableSelector">
-  <option value="resources">Resources</option>
-  <option value="markerframe">Markers</option>
-  <option value="ELECTIONS">Elections</option>
-</select>
+
 </div>
 
 <div id="datawin" class="innertube">
 
 	    <table id="captains-table">
 
+      <thead>
+
+      </thead>
+      <tbody style="height: 70px">
+
+      </tbody>
 
 	    </table>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
 <script>
+
+  document.getElementById("tableSelector").addEventListener("change", function () {
+      const selectedTable = this.value;
+      const iframe1 = document.getElementById("iframe1");
+      const iframeWindow = iframe1.contentWindow;
+// Access something in the iframe:
+      iframeWindow.fetchTableData(selectedTable);
+  });
 
   document.getElementById("logout-button").addEventListener("click", function() {
   window.location.href = "/logout";
