--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -194,9 +194,9 @@
 
 <div id="tabletitle" >
   <select id="tableSelector">
-    <option value="resources">resources</option>
-    <option value="markerframe">Markers</option>
-    <option value="ELECTIONS">Elections</option>
+    <option value="resources">ResourcesTable</option>
+    <option value="markerframe">Markertable</option>
+    <option value="stream_table">Streamtable</option>
   </select>
 <h2>Details for : {{ (formdata or {}).get('tabledetails', '')}} </h2>
 
