--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
   <link rel="stylesheet" href = {{ url_for('static', filename='print.css') }} media="print"/>
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
       {% block map %}
       {% endblock %}
 </head>
+<script src="https://newbrie.github.io/Electtrek/static/map.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <body>
 
