--- a/templates/Dash0.html
+++ b/templates/Dash0.html
@@ -199,7 +199,7 @@
     <option value="stream_table">Streamtable</option>
   </select>
 
-  <h2 id="selectedTitle">Details for: {{ (formdata or {}).get('tabledetails', '') }}</h2>
+  <ul id="selectedTitle">Details for: {{ (formdata or {}).get('tabledetails', '') }}</ul>
 </div>
 
 <div id="datawin" class="innertube">
